--- a/package.json
+++ b/package.json
@@ -6,6 +6,19 @@
     "videojs",
     "videojs-plugin"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/yanwsh/videojs-panorama.git"
+  },
+  "bugs": {
+    "url": "https://github.com/yanwsh/videojs-panorama/issues"
+  },
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://github.com/yanwsh/videojs-panorama/blob/master/LICENSE-MIT"
+    }
+  ],
   "author": "yanwsh@gmail.com",
   "license": "Apache-2.0",
   "dependencies": {
