--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "videojs-panorama",
-  "version": "0.0.3",
+  "version": "0.0.5",
   "description": "a plugin for videojs run a full 360 degree panorama video. ",
   "keywords": [
     "videojs",
@@ -22,6 +22,7 @@
   "author": "yanwsh@gmail.com",
   "license": "Apache-2.0",
   "dependencies": {
+    "iphone-inline-video": "^1.8.3",
     "video.js": "^5.6.0"
   },
   "devDependencies": {
