--- a/.npmignore
+++ b/.npmignore
@@ -1,3 +1,6 @@
 # Intentionally left blank, so that npm does not ignore anything by default,
 # but relies on the package.json "files" array to explicitly define what ends
 # up in the package.
+assets
+scripts
+test
