--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "videojs-panorama",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "a plugin for videojs run a full 360 degree panorama video. ",
   "keywords": [
     "videojs",
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.16.0",
+    "babel-preset-es2015-rollup": "^1.2.0",
     "babelify": "^7.3.0",
     "bannerize": "^1.0.2",
     "bower": "^1.7.9",
@@ -46,6 +47,7 @@
     "lazypipe": "^1.0.1",
     "merge-stream": "^1.0.0",
     "rollup-babel-lib-bundler": "^3.1.0",
+    "rollup-plugin-babel": "^2.6.1",
     "run-sequence": "^1.2.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
