--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "@npm/videojs-panorama",
+  "name": "videojs-panorama",
   "description": "a plugin for videojs run a full 360 degree panorama video.",
   "main": "dist/videojs-panorama.v5.js",
   "authors": [
@@ -14,7 +14,7 @@
   "moduleType": [
     "es6"
   ],
-  "private": true,
+  "private": false,
   "ignore": [
     "**/.*",
     "node_modules",
