ignore more folder which not be used on bower install

--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,9 @@
     "node_modules",
     "bower_components",
     "test",
-    "tests"
+    "tests",
+    "assets",
+    "scripts"
   ],
   "dependencies": {
     "three.js": "^0.75.0"
