--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
   "dependencies": {
     "iphone-inline-video": "^1.9.3",
     "three": "^0.81.2",
+    "wolfy87-eventemitter": "^5.1.0",
     "video.js": "^5.10.8"
   },
   "devDependencies": {
+    "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-es2015-rollup": "^1.2.0",
     "babelify": "^7.3.0",
