--- a/package.json
+++ b/package.json
@@ -33,14 +33,16 @@
     "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-es2015-rollup": "^1.2.0",
+    "babel-preset-flow": "^6.23.0",
     "babelify": "^7.3.0",
     "bannerize": "^1.0.2",
     "bower": "^1.7.9",
     "browser-sync": "^2.14.0",
     "browserify": "^12.0.2",
-    "browserify-shim": "^3.8.12",
+    "browserify-shim": "^3.8.14",
     "browserify-versionify": "^1.0.6",
     "del": "^2.2.2",
+    "flow-bin": "^0.47.0",
     "gulp": "^3.9.0",
     "gulp-cssnano": "^2.1.2",
     "gulp-rename": "^1.2.2",
@@ -53,5 +55,15 @@
     "run-sequence": "^1.2.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
+  },
+  "scripts": {
+    "flow": "flow"
+  },
+  "browserify": {
+    "transform": ["browserify-shim"]
+  },
+  "browserify-shim": {
+    "video.js": "global:videojs",
+    "three": "global:THREE"
   }
 }
