add MediaElementPlayer support

--- a/bower.json
+++ b/bower.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "videojs_5": "video.js#5",
     "videojs_4": "video.js#4",
-    "videojs_6": "video.js#6"
+    "videojs_6": "video.js#6",
+    "mediaelement": "^4.1.3"
   }
 }
