--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-es2015-rollup": "^1.2.0",
     "babel-preset-flow": "^6.23.0",
+    "babel-preset-stage-3": "^6.24.1",
     "babelify": "^7.3.0",
     "bannerize": "^1.0.2",
     "bower": "^1.7.9",
@@ -60,7 +61,9 @@
     "flow": "flow"
   },
   "browserify": {
-    "transform": ["browserify-shim"]
+    "transform": [
+      "browserify-shim"
+    ]
   },
   "browserify-shim": {
     "video.js": "global:videojs",
