--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "videojs-panorama",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "description": "a plugin for videojs run a full 360 degree panorama video. ",
   "keywords": [
     "videojs",
@@ -25,8 +25,8 @@
   "license": "Apache-2.0",
   "dependencies": {
     "iphone-inline-video": "^1.9.3",
-    "three": "^0.81.2",
-    "video.js": "^5.10.8"
+    "three": "^0.86.0",
+    "video.js": "^6.2.4"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.16.0",
@@ -51,5 +51,9 @@
     "run-sequence": "^1.2.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
+  },
+  "peerDependencies": {
+    "video.js": ">=4",
+    "three": ">=0.81"
   }
 }
