--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
   "dependencies": {
     "iphone-inline-video": "^1.9.3",
     "three": "^0.81.2",
-    "wolfy87-eventemitter": "^5.1.0",
-    "video.js": "^5.10.8"
+    "video.js": "^5.20.4",
+    "wolfy87-eventemitter": "^5.2.2"
   },
   "devDependencies": {
     "babel-plugin-transform-object-assign": "^6.22.0",
@@ -36,8 +36,8 @@
     "babel-preset-flow": "^6.23.0",
     "babel-preset-stage-3": "^6.24.1",
     "babelify": "^7.3.0",
-    "bannerize": "^1.0.2",
-    "bower": "^1.7.9",
+    "bannerize": "^1.1.3",
+    "bower": "^1.8.2",
     "browser-sync": "^2.14.0",
     "browserify": "^12.0.2",
     "browserify-shim": "^3.8.14",
