--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Videojs Panorama React Example",
   "scripts": {
-    "start": "node --require babel-register server.js"
+    "postinstall": "./node_modules/.bin/webpack"
   },
   "repository": {
     "type": "git",
@@ -16,16 +16,17 @@
   "homepage": "https://yanwsh.github.io/videojs-panorama/",
   "dependencies": {
     "react": "^0.14.0",
-    "react-dom": "^0.14.0"
+    "react-dom": "^0.14.0",
+    "prop-types": "^15.5.9"
   },
   "devDependencies": {
-    "@babel/core": "7.0.0-beta.31",
-    "@babel/polyfill": "7.0.0-beta.31",
-    "@babel/preset-env": "7.0.0-beta.31",
-    "@babel/preset-react": "7.0.0-beta.31",
-    "@babel/preset-stage-2": "7.0.0-beta.31",
-    "@babel/register": "7.0.0-beta.31",
-    "babel-loader": "8.0.0-beta.0",
+    "@babel/core": "^7.0.0-beta.37",
+    "@babel/polyfill": "^7.0.0-beta.37",
+    "@babel/preset-env": "^7.0.0-beta.37",
+    "@babel/preset-react": "^7.0.0-beta.37",
+    "@babel/preset-stage-2": "^7.0.0-beta.37",
+    "@babel/register": "^7.0.0-beta.37",
+    "babel-loader": "^8.0.0-beta.0",
     "webpack": "^3.6.0",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.19.1"
