--- a/package.json
+++ b/package.json
@@ -26,7 +26,12 @@
   "dependencies": {
     "iphone-inline-video": "^1.9.3",
     "three": "^0.86.0",
-    "video.js": "^6.2.4"
+    "video.js": "^6.2.4",
+  },
+  "scripts": {
+    "clean": "gulp clean",
+    "build": "gulp clean && gulp build-script && gulp build-script-es6 && gulp build-styles",
+    "slate": "npm run clean && rm -rf node_modules"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.16.0",
